[project]
name = "piksel-bros"
version = "0.1.0"
description = "Just a platformer"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pygame-ce==2.5.2",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "justsdk>=2.2.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "ruff>=0.12.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--verbose",
    "--no-header",
    "-s"
]
